<resources>
    <!-- facebook app id -->
    <string name="facebook_app_id" translatable="false">797625984516784</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb797625984516784</string>
    <string name="app_name" translatable="false">Bardog</string>
    <string name="main_toolbar_title">Bardog</string>

    <!-- Create Dog Fragment -->
    <string name="dog_name_input">Dog name</string>
    <string name="vaccinated_input">Vaccinated?</string>
    <string name="aggressive_input">Aggressive?</string>
    <string name="allergies_input">Allergies?</string>
    <string name="dog_type_input">Dog type</string>
    <string name="dog_birth_date_input">Birth year</string>
    <string name="owner_info">Contact Information:</string>
    <string name="extra_comments_input">Comments (Optional)</string>
    <string name="extra_address_input">Address (Optional)</string>
    <string name="cancel_button">Cancel</string>
    <string name="save_button">Save</string>
    <string name="change_image">Add image to continue</string>
    <string name="change_year">Birth year is invalid</string>
    <string name="updated_successfully">Dog updated successfully</string>
    <string name="created_successfully">Dog created successfully</string>
    <string name="yes">yes</string>
    <string name="no">no</string>

    <!-- Home Page Fragment -->
    <string name="my_dogs_title">My Dogs</string>
    <string name="no_dogs_textview">No Dogs Created</string>
    <string name="create_now_button">Create Now</string>

    <!-- Settings Fragment -->
    <string name="settings_title">Settings</string>
    <string name="change_language_button">Change Language</string>
    <string name="edit_user_button">Edit</string>
    <string name="save_info_button">Save</string>
    <string name="delete_user_button">Delete Account</string>
    <string name="are_you_sure">Are you sure you want to delete your account?</string>

    <!-- FAQ Fragment -->
    <string name="faq_title">FAQ</string>

    <string name="q1">FAQ</string>
    <string name="a1">FAQ</string>
    <string name="q2">FAQ</string>
    <string name="a2">FAQ</string>
    <string name="q3">FAQ</string>
    <string name="a3">FAQ</string>
    <string name="q4">FAQ</string>
    <string name="a4">FAQ</string>
    <string name="q5">FAQ</string>
    <string name="a5">FAQ</string>
    <string name="q6">FAQ</string>
    <string name="a6">FAQ</string>
    <string name="q7">FAQ</string>
    <string name="a7">FAQ</string>
    <string name="q8">FAQ</string>
    <string name="a8">FAQ</string>
    <string name="q9">FAQ</string>
    <string name="a9">FAQ</string>

    <!-- WhoAreWe Fragment -->
    <string name="who_are_we_title">Who Are We</string>
    <string name="who_are_we_text">
    BlahBlahBlah...
    </string>

    <!-- Store Fragment -->
    <string name="store_title">Store</string>

    <!-- Login Activity -->
    <string name="login_title">Login</string>
    <string name="login_email_input_hint">Email</string>
    <string name="login_password_input_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="login_using_google">Login With Google</string>
    <string name="not_registered_yet">not registered yet?</string>
    <string name="or">or</string>
    <string name="register_link_button">register</string>
    <string name="forgot_password_button">forgot password?</string>
    <string name="wrong_info">Wrong email or password</string>
    <string name="login_error">Error. Please try another method</string>
    <string name="google_already_used">A google account with the same email already exists</string>

    <!-- Reset Password Dialog -->
    <string name="reset_password_title">Reset Password</string>
    <string name="reset_password_message">Enter email for the reset password</string>
    <string name="send_message">Send</string>
    <string name="email_sent">Reset password email was sent!</string>

    <!-- Verify Email Dialog -->
    <string name="verify_dialog_title">Verify Email</string>
    <string name="verify_dialog_message">verification message was sent to your email. verify and click continue</string>
    <string name="verified">Continue</string>
    <string name="not_verified">Email was not verified</string>
    <string name="resend_email">Resend Email</string>
    <string name="verify_email_sent">Verify message was sent to your email!</string>

    <!-- Register License Activity -->
    <string name="register_license_title">BARDOG</string>
    <string name="tutorial_small_text">Enter tutorial in here - some explanation to the user to make the user feel better about the app and giving away info</string>
    <string name="terms_text">I agree to the </string>
    <string name="terms_button">Terms and Conditions</string>
    <string name="agree_to_terms">Please agree to the terms and conditions to continue</string>

    <!-- Register Activity -->
    <string name="register_title">Register</string>
    <string name="register_email_input_hint">Email</string>
    <string name="register_password_input_hint">Password</string>
    <string name="register_name_input_hint">Full Name</string>
    <string name="register_phone_input_hint">Phone Number (optional)</string>
    <string name="register_address_input_hint">Address (optional)</string>
    <string name="register_button">Register</string>
    <string name="already_registered">already registered?</string>
    <string name="login_link_button">login</string>
    <string name="fill_all">Please enter all fields</string>
    <string name="invalid_email">Invalid email</string>
    <string name="invalid_password">Password must contain at least 8 characters</string>
    <string name="user_exists">user with that email already exists</string>
    <string name="user_created_successfully">User created successfully</string>

    <!-- See Barcode Activity -->
    <string name="see_barcode_title" translatable="false">YOUR BARDOG</string>
    <string name="go_back_button">back</string>
    <string name="share_button">share</string>

    <!-- See Dog Activity -->
    <string name="loading_title">Loading…</string>
    <string name="please_wait_textview">please wait for a few seconds</string>
    <string name="dog_immuned">Dog is immunized</string>
    <string name="dog_not_immuned">Dog is not immunized</string>
    <string name="dog_age">Age: </string>
    <string name="type">Type: </string>
    <string name="additional_comments">Additional Comments: </string>
    <string name="owner_name">Name: </string>
    <string name="owner_phone">Phone Number: </string>
    <string name="owner_address">Address: </string>
    <string name="owner_email">Email Address: </string>

    <!-- Dog List Item Class -->
    <string name="generate_barcode_button">Barcode</string>
    <string name="remove_dog_button">X</string>
    <string name="purchase_barcode">Purchase</string>
    <string name="preview_dog">Preview</string>
    <string name="edit_dog">Edit</string>

    <!-- Splash Activity -->
    <string name="no_internet_connection">Please connect to the internet and retry</string>
    <string name="connect_to_internet">Try again</string>
    <string name="cancel_internet">Cancel</string>

    <!-- Navigation -->
    <string name="nav_header_title" translatable="false">Bardog</string>
    <string name="nav_header_subtitle" translatable="false">useremail@android.com</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_desc" translatable="false">Logo</string>

    <string name="menu_home">Home</string>
    <string name="menu_create_dog">Add Dog</string>
    <string name="menu_faq">FAQ</string>
    <string name="menu_who_are_we">Who Are We</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_share">Share</string>
    <string name="menu_store">Store</string>

</resources>
