<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="50sp"
            android:layout_gravity="center"
            android:textColor="@color/colorPrimaryLight"
            android:layout_marginTop="25dp"
            android:text="@string/login_title"
            />

        <com.facebook.login.widget.LoginButton
            android:id="@+id/facebook_login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp" />

        <com.shobhitpuri.custombuttons.GoogleSignInButton
            android:id="@+id/google_login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/login_using_google"
            app:isDarkTheme="true" />

        <EditText
            android:id="@+id/email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/custom_edittext_input"
            android:drawableStart="@drawable/custom_profile_icon"
            android:drawablePadding="10dp"
            android:padding="10dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/login_email_input_hint" />

        <EditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/custom_edittext_input"
            android:drawableStart="@drawable/custom_password_icon"
            android:drawablePadding="10dp"
            android:padding="10dp"
            android:ems="10"
            android:textAlignment="viewStart"
            android:inputType="textPassword"
            android:hint="@string/login_password_input_hint" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:textColor="@color/colorPrimaryLight"
            android:background="@drawable/button_primary_gradient"
            android:text="@string/login_button"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="25dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/colorPrimaryLight"
                android:layout_gravity="center"
                android:layout_marginEnd="25dp"
                android:text="@string/not_registered_yet"
                />

            <Button
                android:id="@+id/resgister_link_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/zxing_transparent"
                android:textSize="20sp"
                android:textColor="@color/colorPrimary"
                android:layout_gravity="center"
                android:text="@string/register_link_button"
                />


        </LinearLayout>

    </LinearLayout>


</RelativeLayout>