<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="50sp"
            android:textColor="@color/colorPrimaryLight"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:text="@string/register_title"
            />

        <EditText
            android:id="@+id/email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:background="@drawable/custom_edittext_input"
            android:drawableStart="@drawable/custom_profile_icon"
            android:drawablePadding="10dp"
            android:padding="10dp"
            android:ems="10"
            android:hint="@string/register_email_input_hint"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/custom_edittext_input"
            android:drawableStart="@drawable/custom_password_icon"
            android:drawablePadding="10dp"
            android:padding="10dp"
            android:ems="10"
            android:textAlignment="viewStart"
            android:hint="@string/register_password_input_hint"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryLight"
            android:layout_marginTop="50dp"
            android:background="@drawable/button_primary_gradient"
            android:text="@string/register_button"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="25dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/colorPrimaryLight"
                android:layout_gravity="center"
                android:layout_marginEnd="25dp"
                android:text="@string/already_registered"
                />

            <Button
                android:id="@+id/login_link_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/zxing_transparent"
                android:textSize="20sp"
                android:textColor="@color/colorPrimary"
                android:layout_gravity="center"
                android:text="@string/login_link_button"
                />


        </LinearLayout>

    </LinearLayout>


</RelativeLayout>