<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background"
        android:scaleType="centerCrop"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryLight"
        android:textSize="50sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/settings_title" />

    <Button
        android:id="@+id/language_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp"
        android:background="@drawable/button_primary_gradient"
        android:text="@string/change_language_button"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryLight"
        android:textSize="20sp" />

    <com.google.android.material.textfield.TextInputLayout
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
    app:boxStrokeWidth="5dp"
    app:boxCornerRadiusBottomEnd="10dp"
    app:boxCornerRadiusTopStart="10dp"
    android:layout_marginStart="50dp"
    android:layout_marginEnd="50dp"
    android:layout_below="@+id/language_button"
    android:id="@+id/nameInputLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:hint="@string/register_name_input_hint">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/custom_name_icon"
        android:textColor="@color/colorPrimaryLight"
        android:drawablePadding="10dp"
        android:padding="10dp"
        android:enabled="false"
        android:ems="10"
        android:inputType="textPersonName"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeWidth="5dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:id="@+id/phoneInputLayout"
        android:layout_below="@+id/nameInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/register_phone_input_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phone_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryLight"
            android:drawableStart="@drawable/custom_phone_icon"
            android:drawablePadding="10dp"
            android:padding="10dp"
            android:enabled="false"
            android:ems="10"
            android:inputType="phone"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeWidth="5dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:id="@+id/addressInputLayout"
        android:layout_below="@+id/phoneInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/register_address_input_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/address_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryLight"
            android:drawableStart="@drawable/custom_home_icon"
            android:drawablePadding="10dp"
            android:padding="10dp"
            android:enabled="false"
            android:ems="10"
            android:inputType="phone"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/edit_user"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addressInputLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:textAllCaps="false"
        android:background="@drawable/button_primary_gradient"
        android:text="@string/edit_user_button"
        android:textColor="@color/colorPrimaryLight"
        android:textSize="20sp" />

    <Button
        android:id="@+id/delete_user"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_user"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_primary_gradient"
        android:text="@string/delete_user_button"
        android:textColor="@color/colorPrimaryLight"
        android:textSize="20sp" />

</RelativeLayout>