<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    android:descendantFocusability="blocksDescendants" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_gravity="center"
            android:id="@+id/dog_image"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginStart="20dp"
            android:src="@drawable/nala"
            app:civ_border_width="3dp"
            app:civ_border_color="@color/colorPrimaryLight"/>

        <TextView
            android:id="@+id/dog_name_text"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:textSize="30sp"
            android:textColor="@color/colorPrimaryLight"
            android:text="" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/preview_button"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:background="@drawable/button_primary_gradient"
            android:textColor="@color/colorPrimaryLight"
            android:text="@string/preview_dog" />

        <Button
            android:id="@+id/barcode_button"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:layout_marginStart="5dp"
            android:background="@drawable/button_primary_gradient"
            android:textColor="@color/colorPrimaryLight"
            android:text="@string/generate_barcode_button" />

        <Button
            android:id="@+id/purchase_button"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:layout_marginStart="5dp"
            android:background="@drawable/button_primary_gradient"
            android:textColor="@color/colorPrimaryLight"
            android:text="@string/purchase_barcode" />

        <Button
            android:id="@+id/delete_button"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:layout_marginStart="5dp"
            android:background="@drawable/button_primary_gradient"
            android:textColor="@color/colorPrimaryLight"
            android:text="@string/remove_dog_button" />

    </LinearLayout>

</LinearLayout>