<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background"
        android:scaleType="centerCrop"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryLight"
        android:textSize="50sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/my_dogs_title" />

    <LinearLayout
        android:id="@+id/no_dogs_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_marginTop="25dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:visibility="invisible"
        android:orientation="vertical">


        <TextView
            android:id="@+id/no_dogs_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/colorPrimaryLight"
            android:textSize="25sp"
            android:layout_marginTop="50dp"
            android:text="@string/no_dogs_textview" />

        <Button
            android:id="@+id/create_now_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:textColor="@color/colorPrimaryLight"
            android:background="@drawable/button_primary_gradient"
            android:text="@string/create_now_button"
            />
    </LinearLayout>

    <ListView
        android:id="@+id/users_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="70dp"
        android:layout_below="@+id/title"
        android:dividerHeight="10dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp">

    </ListView>

</RelativeLayout>